# orcker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release-please.yml
.planning/: PROJECT.md  REQUIREMENTS.md  RESUME.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: PRD.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/docker/: client.rs  containers.rs  exec.rs  images.rs  log_stream.rs  mod.rs  networks.rs  volumes.rs
src-tauri/src/commands/: artisan.rs  compose.rs  database.rs  docker.rs  global_stack.rs  infra.rs  logs.rs  mod.rs  projects.rs  settings.rs  templates.rs
src-tauri/src/core/: artisan.rs  compose.rs  error.rs  global_stack.rs  mod.rs  projects.rs  settings.rs  state.rs  versioning.rs
src/components/: ContainerTable.vue  DockerStatusBadge.vue  ErrorScreen.vue
src/composables/: useCommandPalette.ts  useResourceMonitor.ts  useUpdater.ts
src/i18n/: en.json  es.json  index.ts  pt-BR.json
src/ipc/: bindings.ts  (+1 more)
(+60 files in other folders)
